<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/booking1"
    android:visibility="visible">

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/edittextnoborder"
            android:layout_gravity="center_vertical">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:text="@string/address"
                android:textSize="17sp"
                android:textColor="@color/InputTextColor"
                android:padding="12dp"
                android:background="@drawable/edittextnoborder" />
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/autocomplete"
                android:background="@drawable/edittextnoborder"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/edittextnoborder">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:textSize="17sp"
                android:textColor="@color/InputTextColor"
                android:padding="12dp"
                android:background="@drawable/edittextnoborder" />
            <Button
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextnoborder"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/edittextnoborder">
            <TextView
                android:layout_width="95dp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:text="@string/end"
                android:textSize="17sp"
                android:textColor="@color/InputTextColor"
                android:padding="12dp"
                android:background="@drawable/edittextnoborder" />
            <Button
                android:id="@+id/end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextnoborder"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/edittextnoborder">
            <TextView
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/guards"
                android:textSize="17sp"
                android:textColor="@color/InputTextColor"
                android:padding="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edittextnoborder" />
            <Spinner
                android:id="@+id/guards"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:background="@drawable/edittextnoborder"
                android:entries="@array/guards"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextnoborder"/>

        <Button
            android:id="@+id/booking1submit"
            android:layout_marginTop="30dp"
            android:text="Add Instruction"
            android:textColor="@color/ButtonTextColorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bouton"/>
    </LinearLayout>
</LinearLayout>